--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   background-image: url("assets/img/background.jpg");
 }
 
+a:link {
+  text-decoration: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
